--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,10 +11,17 @@
 body {
     margin: 0 0;
     font-family: 'Roboto';
-    --colorPreto: #293845;
+    color: var(--colorPreto);
 
 }
 
+h1 {
+    margin-top: 20px;
+    line-height: 90px;
+    font-size: 24px;
+    color: var(--colorPreto);
+
+}
 
 header {
 
@@ -37,18 +44,58 @@ header {
 main {
 
     margin-top: 67px;
-    height: 600px;
+
 
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: start;
+
 
 }
 
 footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     height: 117px;
     display: flex;
     justify-content: start;
     align-items: center;
     background-color: var(--colorBlue);
+    border-top: 1px solid #9EADBA;
+    padding-left: 10px;
+
+
+}
+
+footer .bannerFilm {
+    width: 62px;
+    height: 89px;
+    left: 10px;
+    bottom: 14px;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 2px;
+    padding: 8px;
+    margin: 0;
+
+}
+
+footer img {
+    width: 100%;
+    height: 100%;
+}
+
+h2 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 30px;
+    display: flex;
+    align-items: center;
+    color: var(--colorPreto);
+    margin-left: 14px;
 }
