Versão page_3 finalizada

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -99,3 +99,15 @@ h2 {
     color: var(--colorPreto);
     margin-left: 14px;
 }
+
+h3 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.02em;
+    color: var(--colorPreto)
+}
