--- a/src/components/ButtonOrange/ButtonOrange.css
+++ b/src/components/ButtonOrange/ButtonOrange.css
@@ -16,6 +16,5 @@
      justify-content: center;
      align-items: center;
      letter-spacing: 0.04em;
-     color: white;
-
+     color: white
  }
